cmake_minimum_required(VERSION 3.5)
project(rpp_unittests/HOST_NEW)

set(ROCM_PATH /opt/rocm CACHE PATH "default ROCm installation path")

# Set message options
if(NOT WIN32)
    string(ASCII 27 Esc)
    set(ColourReset "${Esc}[m")
    set(Red         "${Esc}[31m")
    set(Green       "${Esc}[32m")
    set(Yellow      "${Esc}[33m")
    set(Blue        "${Esc}[34m")
    set(BoldBlue    "${Esc}[1;34m")
    set(Magenta     "${Esc}[35m")
    set(Cyan        "${Esc}[36m")
    set(White       "${Esc}[37m")
endif()

find_package(OpenCV QUIET)
# BOOST
set(BOOST_COMPONENTS filesystem system)
find_package(Boost COMPONENTS ${BOOST_COMPONENTS} REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
set(LINK_LIBRARY_LIST ${LINK_LIBRARY_LIST} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
# OpenMP
find_package(OpenMP REQUIRED)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(LINK_LIBRARY_LIST ${LINK_LIBRARY_LIST} OpenMP::OpenMP_CXX)

if (OpenCV_FOUND)
    message("-- ${Green}${PROJECT_NAME} set to build with rpp and OpenCV${ColourReset}")
    include_directories(${OpenCV_INCLUDE_DIRS})
    include_directories(${ROCM_PATH}/include ${ROCM_PATH}/include/rpp /usr/local/include)
    link_directories(${ROCM_PATH}/lib /usr/local/lib)

    add_executable(BatchPD_host_pkd3 BatchPD_host_pkd3.cpp)
    add_executable(BatchPD_host_pln1 BatchPD_host_pln1.cpp)
    add_executable(BatchPD_host_pln3 BatchPD_host_pln3.cpp)
    add_executable(Tensor_host_pkd3 Tensor_host_pkd3.cpp)
    add_executable(Tensor_host_pln3 Tensor_host_pln3.cpp)
    add_executable(Tensor_host_pln1 Tensor_host_pln1.cpp)
    # add_executable(Single_host Single_host.cpp)
    add_executable(uniqueFunctionalities_host uniqueFunctionalities_host.cpp)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++14")
    target_link_libraries(BatchPD_host_pkd3 ${OpenCV_LIBS} -lamd_rpp pthread ${LINK_LIBRARY_LIST})
    target_link_libraries(BatchPD_host_pln1 ${OpenCV_LIBS} -lamd_rpp pthread ${LINK_LIBRARY_LIST})
    target_link_libraries(BatchPD_host_pln3 ${OpenCV_LIBS} -lamd_rpp pthread ${LINK_LIBRARY_LIST})
    target_link_libraries(Tensor_host_pkd3 ${OpenCV_LIBS} -lamd_rpp pthread ${LINK_LIBRARY_LIST})
    target_link_libraries(Tensor_host_pln3 ${OpenCV_LIBS} -lamd_rpp pthread ${LINK_LIBRARY_LIST})
    target_link_libraries(Tensor_host_pln1 ${OpenCV_LIBS} -lamd_rpp pthread ${LINK_LIBRARY_LIST})
    # target_link_libraries(Single_host ${OpenCV_LIBS} -lamd_rpp pthread boost_filesystem boost_system )
    target_link_libraries(uniqueFunctionalities_host ${OpenCV_LIBS} -lamd_rpp pthread ${LINK_LIBRARY_LIST})
else()
    message("-- ${Yellow}Error: OpenCV must be installed to install ${PROJECT_NAME} successfully!${ColourReset}")
endif()